Fix a cut-ant-paste error in setting QuantTables for JPXEncode filter. Bug 691868.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@12003 a1074d23-0009-0410-80fe-cf8c14f379e6